# titan_rbac

./: pyproject.toml  requirements.txt  snowflake_rbac_manager.py  titan_test.py
.devcontainer/: devcontainer.json
