[project]
name = "titan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "titan-core",
    "snowflake-connector-python",
    "streamlit",
    "altair>=4.0.0",
    "pandas"
]

[tool.uv.sources]
titan-core = { workspace = true }

[tool.hatch.build]
packages = ["."]

[tool.poetry]
package-mode = false
